@@ -1,4 +1,3 @@
-+ Add slideshow
 + Disable screen saver in fullscreen_mode
 + Allow image manipulations (rotate, zoom) on animated images
 + Test on Windows/Mac?
@@ -8,4 +7,3 @@
 + Load first image quicker by backgrounding search process? (Bjoern Martensen)
 + Add side treeview for browsing? (Bjoern Martensen)
 + Delete/Save images? (Bjoern Martensen)
-+ "Open with ..." (for opening the image in an editor, i.e., gimp)?
